# FastAPIDemo

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run.sh  setup.cfg  test_requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
requirements/: requirements.txt
src/: main.py
src/my_app/: __init__.py  main.py
tests/: conftest.py  test_get_endpoints.py
